--- a/about.css
+++ b/about.css
@@ -418,6 +418,90 @@ a:hover {
 
 }
 
+/* MOBILE VERSION Iphone 12/13 Vertical */
+
+@media screen and (386px<=width <=395px) and (801px<=height <=860px) {
+
+    .g-container {
+        display: grid;
+        width: 100%;
+
+        padding-left: 8vw;
+        margin-right: 10vw;
+
+
+        justify-content: center;
+
+        gap: 2vh;
+    }
+
+
+
+    .gr_image1 {
+
+        width: auto;
+        height: 23.8vh;
+        margin-top: 5vh;
+
+
+    }
+
+    .item-ev {
+        width: 100%;
+    }
+
+
+    ul,
+    li {
+        list-style-type: none;
+    }
+
+    .p {
+
+        line-break: auto;
+        word-wrap: break-word;
+    }
+
+    .ev_header {
+        font-size: 1.6rem;
+        margin-top: -1vh;
+    }
+
+    .courier_text {
+
+        font-size: 1.1rem;
+        max-width: 80%;
+    }
+
+    .ev_list {
+        margin-top: -2.5vh;
+        font-size: 1.0rem;
+    }
+
+    .header_email {
+        font-size: 1.25rem;
+        margin-top: 0.1vh;
+    }
+
+
+    .header_live_performance {
+        font-size: 1.28rem;
+        margin-top: -1vh;
+
+    }
+
+    .media_links {
+        margin-top: -2vh;
+    }
+
+    .service_text{
+        font-size: 1.1rem;
+    }
+
+
+}
+
+
 
 
 
