--- a/style.css
+++ b/style.css
@@ -337,7 +337,7 @@ ul {
 
 /* MOBILE VERSION GALAXY S20+ Vertical */
 
-@media screen and (361px<=width <=385px) and (840px<=height <=860px) {
+@media screen and (361px<=width <=385px) and (801px<=height <=860px) {
     .nav ul {
         font-size: 1.2rem;
         position: fixed;
@@ -383,6 +383,62 @@ ul {
     .footer {
 
         margin-top: 4.5vh;
+
+    }
+
+
+}
+
+
+/* MOBILE VERSION Iphone 12/13 Vertical */
+
+@media screen and (386px<=width <=395px) and (801px<=height <=860px) {
+    .nav ul {
+        font-size: 1.2rem;
+        position: fixed;
+        top: -1.3vh;
+        display: flex;
+        justify-content: left;
+        flex-direction: row;
+        margin-left: -10.4vw;
+        padding-top: 2vh;
+        flex-wrap: nowrap;
+        gap: 0vw;
+        z-index: 3;
+
+
+    }
+
+    .content-section {
+        margin-top: 5vh;
+        font-size: 2.5rem;
+        color: #777;
+    }
+
+    .content-section1 {
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: 3vh;
+        margin-top: 5vh;
+
+    }
+
+
+    .overflow_box_hide {
+        background-color: #ffffff;
+        width: 100%;
+        height: 10vh;
+        position: fixed;
+        top: 0;
+        z-index: 2;
+
+
+    }
+
+    .footer {
+
+        margin-top: 4.0vh;
+        padding-bottom: 2vh;
 
     }
 
