--- a/style.css
+++ b/style.css
@@ -65,6 +65,54 @@ ul {
 
 }
 
+ .nav ul {
+        font-size: 1.3rem;
+        position: fixed;
+        top: -1.3vh;
+        display: flex;
+        justify-content: left;
+        flex-direction: column;
+        margin-left: -7.4vw;
+        padding-top: 2vh;
+        flex-wrap: nowrap;
+        gap: 1.7vw;
+        z-index: 3;
+
+
+    }
+
+    .content-section {
+        margin-top: 5vh;
+        font-size: 2.5rem;
+        color: #777;
+    }
+
+    .content-section1 {
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: 3vh;
+        margin-top: 5vh;
+
+    }
+
+
+    .overflow_box_hide {
+        background-color: #ffffff;
+        width: 100%;
+        height: 10vh;
+        position: fixed;
+        top: 0;
+        z-index: 2;
+
+
+    }
+
+    .footer {
+
+        margin-top: 4.5vh;
+
+    }
+
 /* MOBILE VERSION GALAXY NOTE ANDROID 11 Vertical */
 
 @media screen and (386px <=width <=499px) and (761px <=height <=950px) {
