--- a/about.css
+++ b/about.css
@@ -66,35 +66,25 @@ li {
 
 
 .header_email {
-    font-size: 1.28rem;
     margin-top: 0.1vh;
 }
 
 
-.header_live_performance {
-    font-size: 1.5rem;
-}
+
 
 .courier_text {
 
-    font-size: 1.4rem;
     max-width: 80%;
 }
 
 .ev_list {
     margin-top: -2.5vh;
-    font-size: 1.4rem;
+    max-width: 90%;
+}
+.service_text{
     max-width: 90%;
 }
 
-.service_text {
-    font-size: 1.3rem;
-
-}
-
-.media_links {
-    font-size: 1.1rem;
-}
 
 
 
@@ -142,10 +132,11 @@ li {
     .ev_list {
         margin-top: -2.5vh;
         max-width: 90%;
+        font-size: 1.2rem;
     }
 
     .header_live_performance {
-        font-size: 1.28rem;
+        font-size: 1.4rem;
         margin-top: -1vh;
 
     }
@@ -229,44 +220,22 @@ li {
 @media screen and (width <=360px) and (height <=760px) {
 
     .g-container {
-        display: grid;
-        width: 100%;
 
         padding-left: 9vw;
         margin-right: 10vw;
 
-
-        justify-content: center;
-
-        gap: 2vh;
     }
 
 
 
     .gr_image1 {
 
-        width: auto;
         height: 24vh;
         margin-top: 5vh;
 
 
     }
 
-    .item-ev {
-        width: 100%;
-    }
-
-
-    ul,
-    li {
-        list-style-type: none;
-    }
-
-    .p {
-
-        line-break: auto;
-        word-wrap: break-word;
-    }
 
     .ev_header {
         font-size: 1.6rem;
@@ -275,12 +244,13 @@ li {
 
     .courier_text {
 
-        font-size: 1.0rem;
+        font-size: 1.1rem;
         max-width: 80%;
     }
 
     .ev_list {
         margin-top: -2.5vh;
+        font-size: 1.1rem;
     }
 
     .header_email {
@@ -297,6 +267,10 @@ li {
 
     .media_links {
         margin-top: -2vh;
+    }
+
+    .service_text{
+        font-size: 1.2rem;
     }
 
 
