--- a/about.css
+++ b/about.css
@@ -237,10 +237,6 @@ li {
     }
 
 
-    .ev_header {
-        font-size: 1.6rem;
-        margin-top: -1vh;
-    }
 
     .courier_text {
 
@@ -282,16 +278,10 @@ li {
 @media screen and (width <=760px) and (height <=360px) {
 
     .g-container {
-        display: grid;
-        width: 100%;
+
 
         padding-left: 36vw;
         margin-right: 10vw;
-
-
-        justify-content: center;
-
-        gap: 2vh;
 
     }
 
@@ -299,27 +289,10 @@ li {
 
     .gr_image1 {
 
-        width: auto;
         height: 75vh;
         margin-top: 4vh;
 
 
-    }
-
-    .item-ev {
-        width: 100%;
-    }
-
-
-    ul,
-    li {
-        list-style-type: none;
-    }
-
-    .p {
-
-        line-break: auto;
-        word-wrap: break-word;
     }
 
 
@@ -360,58 +333,33 @@ li {
 @media screen and (width <=360px) and (761px<=height <=810px) {
 
     .g-container {
-        display: grid;
-        width: 100%;
+
 
         padding-left: 9vw;
         margin-right: 10vw;
-
-
-        justify-content: center;
-
-        gap: 2vh;
     }
 
 
 
     .gr_image1 {
 
-        width: auto;
         height: 24vh;
         margin-top: 5vh;
 
 
     }
 
-    .item-ev {
-        width: 100%;
-    }
 
-
-    ul,
-    li {
-        list-style-type: none;
-    }
-
-    .p {
-
-        line-break: auto;
-        word-wrap: break-word;
-    }
-
-    .ev_header {
-        font-size: 1.6rem;
-        margin-top: -1vh;
-    }
 
     .courier_text {
 
-        font-size: 1.0rem;
+        font-size: 1.1rem;
         max-width: 80%;
     }
 
     .ev_list {
         margin-top: -2.5vh;
+        font-size: 1.1rem;
     }
 
     .header_email {
@@ -430,6 +378,10 @@ li {
         margin-top: -2vh;
     }
 
+    .service_text{
+        font-size: 1.1rem;
+    }
+
 
 }
 
@@ -438,23 +390,15 @@ li {
 @media screen and (386px<=width <=395px) and (801px<=height <=860px) {
 
     .g-container {
-        display: grid;
-        width: 100%;
 
         padding-left: 8vw;
         margin-right: 10vw;
-
-
-        justify-content: center;
-
-        gap: 2vh;
     }
 
 
 
     .gr_image1 {
 
-        width: auto;
         height: 23.8vh;
         margin-top: 5vh;
 
@@ -466,22 +410,6 @@ li {
     }
 
 
-    ul,
-    li {
-        list-style-type: none;
-    }
-
-    .p {
-
-        line-break: auto;
-        word-wrap: break-word;
-    }
-
-    .ev_header {
-        font-size: 1.6rem;
-        margin-top: -1vh;
-    }
-
     .courier_text {
 
         font-size: 1.1rem;
@@ -490,7 +418,7 @@ li {
 
     .ev_list {
         margin-top: -2.5vh;
-        font-size: 1.0rem;
+        font-size: 1.1rem;
     }
 
     .header_email {
@@ -521,16 +449,10 @@ li {
 @media screen and (761px <=width <=850px) and (361px <=height <=450px) {
 
     .g-container {
-        display: grid;
-        width: 100%;
+
 
         padding-left: 32vw;
         margin-right: 10vw;
-
-
-        justify-content: center;
-
-        gap: 2vh;
 
     }
 
@@ -538,28 +460,12 @@ li {
 
     .gr_image1 {
 
-        width: auto;
         height: 61vh;
         margin-top: 4vh;
 
 
     }
 
-    .item-ev {
-        width: 100%;
-    }
-
-
-    ul,
-    li {
-        list-style-type: none;
-    }
-
-    .p {
-
-        line-break: auto;
-        word-wrap: break-word;
-    }
 
 
     .header_email {
