--- a/style.css
+++ b/style.css
@@ -650,21 +650,67 @@ ul {
 
 }
 
-/* MOBILE VERSION Iphone SE 2nd*/
-@media screen and (370px <=width <=380px) and (660px <=height <=670px) {
 
-    .nav {
-        margin-bottom: 10vh;
+/* MOBILE VERSION Iphone SE 2ndg Vertical */
+@media screen and (361px <=width <=499px) and (650px <=height <=760px){
+    
+    .nav ul {
+        font-size: 1.25rem;
+        position: fixed;
+        top: -1.3vh;
+        display: flex;
+        justify-content: left;
+        flex-direction: row;
+        margin-left: -12.4vw;
+        padding-top: 2vh;
+        flex-wrap: nowrap;
+        gap: 1.7vw;
+        z-index: 3;
 
 
     }
 
-    .nav ul {
-        margin-left: -14.4vw;
+    .content-section {
+        margin-top: 5vh;
+        font-size: 2.5rem;
+        color: #777;
+    }
+
+    .content-section1 {
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: 3vh;
+        margin-top: 5vh;
+
+    }
+
+
+    .overflow_box_hide {
+        background-color: #ffffff;
+        width: 100%;
+        height: 10vh;
+        position: fixed;
+        top: 0;
+        z-index: 2;
+
+
+    }
+
+    .footer {
+
+        margin-top: 4.5vh;
+
     }
 
 }
 
+/* MOBILE VERSION Iphone SE 2ndg Horizontal */
+@media screen and (650px <=width <=760px) and (361px <=height <=380px) {
+
+    .footer{
+        font-size: 0.8rem;
+    }
+}
 
 
 /* WEB VERSION */
