--- a/style.css
+++ b/style.css
@@ -65,53 +65,53 @@ ul {
 
 }
 
- .nav ul {
-        font-size: 1.3rem;
-        position: fixed;
-        top: -1.3vh;
-        display: flex;
-        justify-content: left;
-        flex-direction: column;
-        margin-left: -7.4vw;
-        padding-top: 2vh;
-        flex-wrap: nowrap;
-        gap: 1.7vw;
-        z-index: 3;
+.nav ul {
+    font-size: 1.3rem;
+    position: fixed;
+    top: -1.3vh;
+    display: flex;
+    justify-content: left;
+    flex-direction: column;
+    margin-left: -7.4vw;
+    padding-top: 2vh;
+    flex-wrap: nowrap;
+    gap: 1.7vw;
+    z-index: 3;
 
 
-    }
+}
 
-    .content-section {
-        margin-top: 5vh;
-        font-size: 2.5rem;
-        color: #777;
-    }
+.content-section {
+    margin-top: 5vh;
+    font-size: 2.5rem;
+    color: #777;
+}
 
-    .content-section1 {
-        font-size: 2.5rem;
-        color: #777;
-        padding-top: 3vh;
-        margin-top: 5vh;
+.content-section1 {
+    font-size: 2.5rem;
+    color: #777;
+    padding-top: 3vh;
+    margin-top: 5vh;
 
-    }
-
-
-    .overflow_box_hide {
-        background-color: #ffffff;
-        width: 100%;
-        height: 10vh;
-        position: fixed;
-        top: 0;
-        z-index: 2;
+}
 
 
-    }
+.overflow_box_hide {
+    background-color: #ffffff;
+    width: 100%;
+    height: 10vh;
+    position: fixed;
+    top: 0;
+    z-index: 2;
 
-    .footer {
 
-        margin-top: 4.5vh;
+}
 
-    }
+.footer {
+
+    margin-top: 4.5vh;
+
+}
 
 /* MOBILE VERSION GALAXY NOTE ANDROID 11 Vertical */
 
@@ -652,8 +652,8 @@ ul {
 
 
 /* MOBILE VERSION Iphone SE 2ndg Vertical */
-@media screen and (361px <=width <=499px) and (650px <=height <=760px){
-    
+@media screen and (361px <=width <=499px) and (650px <=height <=760px) {
+
     .nav ul {
         font-size: 1.25rem;
         position: fixed;
@@ -707,14 +707,14 @@ ul {
 /* MOBILE VERSION Iphone SE 2ndg Horizontal */
 @media screen and (650px <=width <=760px) and (361px <=height <=380px) {
 
-    .footer{
+    .footer {
         font-size: 0.8rem;
     }
 }
 
 /* MOBILE VERSION Kindle Fire HDX VERTICAL */
-@media screen and (780px <=width <=830px) and (1086px <=height <= 1350px){
-      
+@media screen and (780px <=width <=830px) and (1086px <=height <=1350px) {
+
     .nav ul {
         font-size: 1.4rem;
         position: fixed;
@@ -755,34 +755,32 @@ ul {
         top: 0;
         z-index: 2;
     }
-    
-    
-    .footer{
+
+
+    .footer {
         font-size: 0.9rem;
     }
 }
 
 
 /* MOBILE VERSION Kindle Fire HDX HORIZONTAL */
-@media screen and (1101px <=width <=1300px) and (750px <=height <=830px){
-     
-    .footer{
-        font-size: 0.9rem;
-    }
+@media screen and (1101px <=width <=1300px) and (750px <=height <=830px) {
 
-    .nav ul{
+
+
+    .nav ul {
         top: 2.5vh;
     }
 
-    
+
     .nav ul {
-        font-size: 1.3rem;
-        position: fixed;
+        font-size: 1.5rem;
+        position: fixed
         display: flex;
         justify-content: left;
         flex-direction: column;
-        margin-left: -3.4vw;
-        top: 4.5vh;
+        margin-left: -2.4vw;
+        top: 0.5vh;
 
         flex-wrap: nowrap;
         gap: 1.7vw;
@@ -810,10 +808,14 @@ ul {
     .overflow_box_hide {
         background-color: #ffffff;
         width: 100%;
-        height: 11vh;
+        height: 3vh;
         position: fixed;
         top: 0;
         z-index: 2;
+    }
+
+    .footer {
+        font-size: 0.95rem;
     }
 
 }
