--- a/about.css
+++ b/about.css
@@ -921,31 +921,26 @@ li {
 
 
 /* DESKTOP VERSION */
-@media screen and (500px <=width <=799px) and (501px <=height <=989px) {
+@media screen and (width >=1301px) and (height >=501px) {
+
 
 
     .g-container {
         display: grid;
         grid-template-areas:
             "image bio"
-            "header bio"
-            "list bio";
+            "email bio"
+            "services bio"
+            "links bio"
+            "live_header bio"
+             "events bio";
 
         grid-template-columns: 1fr 1fr;
-
-
-
         grid-auto-rows: minmax(3vh, auto);
-
-        width: 100%;
         left: 30vw;
-        padding-left: 20vw;
+        padding-left: 22vw;
         margin-right: 20vw;
 
-
-        justify-content: center;
-
-        gap: 2vh;
     }
 
 
@@ -959,13 +954,6 @@ li {
     }
 
 
-    .ev_header {
-        font-size: 1.6rem;
-        grid-area: header;
-
-
-    }
-
     .dj_list {
         padding-left: 0;
         margin-left: 0;
@@ -973,23 +961,12 @@ li {
 
     }
 
-    ul,
-    li {
-        list-style-type: none;
-        width: 60%;
-
-    }
-
-    .p {
-
-        line-break: auto;
-        word-wrap: break-word;
-    }
 
     .ev_list {
         grid-area: list;
         margin-top: -2vh;
         font-size: 1.1rem;
+        grid-area: events;
 
 
     }
@@ -1006,6 +983,18 @@ li {
         font-size: 1.1rem;
         grid-area: bio;
 
+    }
+
+    .media_links{
+        grid-area: links;
+    }
+
+    .header_live_performance{
+        grid-area: live_header;
+    }
+
+    .header_email{
+        grid-area: email;
     }
 
 }
