--- a/style.css
+++ b/style.css
@@ -53,6 +53,8 @@ ul {
 }
 
 
+
+/* DEFAULTS */
 .footer {
 
     left: 0;
@@ -145,12 +147,7 @@ ul {
 
 
     .overflow_box_hide {
-        background-color: #ffffff;
-        width: 100%;
         height: 11vh;
-        position: fixed;
-        top: 0;
-        z-index: 2;
 
     }
 
@@ -167,45 +164,15 @@ ul {
 
     .nav ul {
         font-size: 1.2rem;
-        position: fixed;
-        top: -1.3vh;
-        display: flex;
-        justify-content: left;
         flex-direction: row;
         margin-left: -14.4vw;
         padding-top: 2vh;
-        flex-wrap: nowrap;
         gap: 1vw;
-        z-index: 3;
 
 
     }
 
-    .content-section {
-        margin-top: 5vh;
-        font-size: 2.5rem;
-        color: #777;
-    }
-
-    .content-section1 {
-        font-size: 2.5rem;
-        color: #777;
-        padding-top: 3vh;
-        margin-top: 5vh;
-
-    }
-
-
-    .overflow_box_hide {
-        background-color: #ffffff;
-        width: 100%;
-        height: 10vh;
-        position: fixed;
-        top: 0;
-        z-index: 2;
-
-
-    }
+    
 
     .footer {
 
@@ -221,44 +188,20 @@ ul {
 @media screen and (width <=760px) and (height <=360px) {
 
     .nav ul {
-        font-size: 1.3rem;
-        position: fixed;
-        display: flex;
-        justify-content: left;
-        flex-direction: column;
+
         margin-left: -3.4vw;
         top: 4.5vh;
 
-        flex-wrap: nowrap;
-        gap: 1.7vw;
-        z-index: 3;
-        margin-top: vh;
 
 
     }
 
-    .content-section {
-        margin-top: 5vh;
-        font-size: 2.5rem;
-        color: #777;
-    }
 
-    .content-section1 {
-        font-size: 2.5rem;
-        color: #777;
-        padding-top: 3vh;
-        margin-top: 5vh;
-
-    }
 
 
     .overflow_box_hide {
-        background-color: #ffffff;
-        width: 100%;
         height: 11vh;
-        position: fixed;
-        top: 0;
-        z-index: 2;
+
     }
 
     .footer {
@@ -273,45 +216,13 @@ ul {
 @media screen and (width <=360px) and (761px<=height <=810px) {
     .nav ul {
         font-size: 1.2rem;
-        position: fixed;
-        top: -1.3vh;
-        display: flex;
-        justify-content: left;
         flex-direction: row;
         margin-left: -14.4vw;
-        padding-top: 2vh;
-        flex-wrap: nowrap;
         gap: 1vw;
-        z-index: 3;
 
 
     }
 
-    .content-section {
-        margin-top: 5vh;
-        font-size: 2.5rem;
-        color: #777;
-    }
-
-    .content-section1 {
-        font-size: 2.5rem;
-        color: #777;
-        padding-top: 3vh;
-        margin-top: 5vh;
-
-    }
-
-
-    .overflow_box_hide {
-        background-color: #ffffff;
-        width: 100%;
-        height: 10vh;
-        position: fixed;
-        top: 0;
-        z-index: 2;
-
-
-    }
 
     .footer {
 
